Small fix overflow bug

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -22,8 +22,8 @@
     justify-content: space-between;
   }
 
-  .subtitle {
-    padding-bottom: 0.4rem;
+  #subtitleOne {
+    padding-bottom: 1vw;
   }
 
   .secondary {
